--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -7,7 +7,7 @@ import Integration from "./components/Integration.astro";
 import Discover from './components/discover.astro'
 ---
 
-<div class="bg-white max-w-6xl mx-auto justify-center text-gray-500">
+<div class="bg-white max-w-6xl mt-4  mx-auto justify-center text-gray-500">
   <!-- Hero Section -->
   <div
     class="hero-section bg-black rounded-lg text-white text-center py-16 px-4 relative overflow-hidden"
@@ -19,7 +19,7 @@ import Discover from './components/discover.astro'
     >
     </div>
     <!-- Light Color Overlay -->
-    <div class="absolute inset-0 bg-black opacity-50 rounded-lg"></div>
+    <!-- <div class="absolute inset-0 bg-black opacity-50 rounded-lg"></div> -->
 
     <!-- Content -->
     <div class="relative z-10">
