--- a/src/components/infopages/products/Service.astro
+++ b/src/components/infopages/products/Service.astro
@@ -7,7 +7,7 @@ import Integration from "./components/Integration.astro";
 import Discover from "./components/discover.astro";
 ---
 
-<section class="bg-g max-w-6xl mx-auto justify-center text-gray-800">
+<section class="bg-g max-w-6xl mx-auto mt-4  justify-center text-gray-800">
   <!-- Hero Section -->
   <div
     class="hero-section bg-black text-white rounded-lg text-center py-16 px-4 relative"
@@ -15,11 +15,11 @@ import Discover from "./components/discover.astro";
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-center rounded-lg"
-      style="background-image: url('/images/Industry/ai-answering-service.jpg');"
+      style="background-image: url('/images/projects/AI Answering Service.png');"
     >
     </div>
     <!-- Light Color Overlay -->
-    <div class="absolute inset-0 bg-black opacity-50 rounded-lg"></div>
+    <!-- <div class="absolute inset-0 bg-black opacity-50 rounded-lg"></div> -->
 
     <!-- Content -->
     <div class="relative">
