--- a/src/components/infopages/products/Concierge.astro
+++ b/src/components/infopages/products/Concierge.astro
@@ -170,8 +170,9 @@ import Discover from './components/discover.astro'
 <Discover />
 
   <!--  Slider -->
-  <section class="my-12 py-12 px-6">
-    <div class="text-left gap-10 mb-8 flex justify-between">
+  <section class="my-12 py-12 px-6 ">
+    <img src="/images/projects/Integration.png" alt="Integration" />
+    <!-- <div class="text-left gap-10 mb-8 flex justify-between">
       <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display">
         Connect CallSupport to Your Existing System
       </h2>
@@ -183,7 +184,7 @@ import Discover from './components/discover.astro'
     </div>
     <div>
       <LogoSlider client:only="react" />
-    </div>
+    </div> -->
   </section>
 
   <!-- Integration Section -->
